Encapsulate StopModelIndex